--- a/app/client/style.css
+++ b/app/client/style.css
@@ -3,20 +3,26 @@
 
 /* Set up some CSS variables to theme the application. */
 :root {
-  --matr-navbar-bg: #ECECEC;
-  --matr-navbar-bg-rgb: 236, 236, 236;
+  --matr-navbar-bg: #085927; /* Your chosen green color */
+  --matr-navbar-text-color: white; /* White color for text */
 }
 
-/* Change bootstrap variable values.
- See https://getbootstrap.com/docs/5.2/customize/css-variables/
- */
+/* Change bootstrap variable values. */
 body {
-  --bs-light-rgb: var(--matr-navbar-bg-rgb);
+  --bs-dark: var(--matr-navbar-bg);
+  --bs-dark-rgb: 8, 89, 39; /* Corrected RGB equivalent of your chosen green color */
+}
+
+/* Style the navbar and dropdown items */
+.bg-dark, .bg-dark a, .bg-dark a.dropdown-item {
+  background-color: var(--matr-navbar-bg) !important; /* Your chosen green color */
+  color: var(--matr-navbar-text-color) !important; /* White text */
 }
 
 /* Set the alert background on the signin and signup pages. */
 #signin-page .alert-light, #signup-page .alert-light {
-  --bs-alert-bg: var(--matr-navbar-bg);
+  background-color: var(--matr-navbar-bg);
+  color: var(--matr-navbar-text-color);
 }
 
 /* Define custom styles */
@@ -25,4 +31,9 @@ body {
   color: var(--bs-dark);
   padding-top: 10px;
   padding-bottom: 20px;
+}
+
+footer, footer a {
+  background-color: var(--matr-navbar-bg); /* Your chosen green color */
+  color: var(--matr-navbar-text-color); /* White text */
 }
