--- a/app/client/style.css
+++ b/app/client/style.css
@@ -33,28 +33,122 @@ body {
   padding-bottom: 20px;
 }
 
-landing-subtitle {
-  font-size: 23px;
+/*Landing Page*/
+
+#landing-page {
+  background-color: rgb(70, 198, 186);
+  /*cities, top right cloud, top left cloud, bottom right cloud, wave behind cities*/
+  background-image: url("/images/cities.png"), url("/images/top-right-cloud.png"), url("/images/top-left-cloud.png"), url("/images/bottom-right-cloud.png"), url("/images/bottom-left-cloud.png"), url("/images/hot-air-balloon.png"), url("/images/wave.png");
+  background-size: 675px 500px, 450px 350px, 550px 250px, 525px 250px, 525px 250px, 425px 375px, 875px 875px; /*width height */
+  background-position: top 260px right 85px, top -10px right -10px, top -20px left -10px, bottom -20px right -25px, bottom -20px left -10px, top 700px left 30px, top 105px right 0px;
+  background-repeat: no-repeat;
 }
 
-landing-description {
+#landing-description { /*Manoa Study Abroad Central top description*/
   text-align: center;
-  align-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
+  padding-top: 150px;
+  padding-bottom: 50px;
+  margin-left: 70px;
+  color: white;
+  font-size: 23px;
+  font-family: Garamond;
+  animation: 3s fadeIn;
 }
 
-.logos {
-  height: 100px;
-  width: 400px;
-  margin-left:50px;
+@keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
 }
-.landing-image {
-  height: 300px;
-  width: 675px;
+
+#login-button {
+  color: black;
   margin-top: 25px;
-  margin-bottom: 50px;
-  align-content: center;
+  --bs-btn-hover-border-color: black;
+  font-size: 18px;
+  margin-right: 10px;
+  animation: 3s fadeIn;
 }
+
+#signup-button {
+  color: black;
+  margin-top: 25px;
+  --bs-btn-hover-border-color: black;
+  font-size: 18px;
+  margin-right: -40px;
+  animation: 3s fadeIn;
+}
+
+#features-icons {
+  color: white;
+  font-size: 50px;
+  animation: 3s fadeIn;
+}
+
+#features-desc {
+  color: white;
+  font-family: Garamond;
+  font-size: 22px;
+  padding-bottom: 80px;
+  animation: 3s fadeIn;
+}
+
+#mix-logo {
+  height: 175px;
+  width: 175px;
+  margin-right: -100px;
+}
+
+#nse-logo {
+  height: 175px;
+  width: 175px;
+}
+
+#sac-logo {
+  height: 175px;
+  width: 175px;
+  margin-left: -100px;
+}
+
+#logo-heading { /*Name of Program*/
+  font-family: Garamond;
+  fontSize: 32px;
+  color: white;
+  padding-top: 30px;
+  animation: 3s fadeIn;
+}
+
+#program-short-desc { /*Short description underneath circle logo*/
+  font-family: Garamond;
+  font-size: 20px;
+  color: white;
+  text-align: center;
+  animation: 3s fadeIn;
+}
+
+#landing-title { /*Programs and Features header*/
+  color: white;
+  font-size: 55px;
+  font-family: Garamond;
+  animation: 3s fadeIn;
+  text-align: center;
+  font-weight: bolder;
+  padding-bottom: 70px;
+  animation: 3s fadeIn;
+}
+
+#landing-title-join { /*Join Now!*/
+  color: white;
+  font-size: 45px;
+  font-family: Garamond;
+  animation: 3s fadeIn;
+  text-align: center;
+  font-weight: bolder;
+  padding-bottom: 175px;
+  padding-top: 50px;
+}
+
+/*Ending of Landing Page*/
 
 footer, footer a {
   background-color: var(--matr-navbar-bg); /* Your chosen green color */
