--- a/app/client/style.css
+++ b/app/client/style.css
@@ -60,7 +60,7 @@ h2 {
   background-color: rgb(70, 198, 186);
   /*cities, top right cloud, top left cloud, bottom right cloud, hot air balloon, wave behind cities*/
   background-image: url("/images/cities.png"), url("/images/top-right-cloud.png"), url("/images/top-left-cloud.png"), url("/images/bottom-right-cloud.png"), url("/images/bottom-left-cloud.png"), url("/images/hot-air-balloon.png"),
-  url("app/public/images/wave.png");
+  url("/images/wave.png");
   background-size: 675px 500px, 450px 350px, 550px 250px, 525px 250px, 525px 250px, 425px 375px, 875px 875px; /*width height */
   background-position: top 260px right 85px, top -10px right -10px, top -20px left -10px, bottom -20px right -25px, bottom -20px left -10px, top 700px left 30px, top 105px right 0px;
   background-repeat: no-repeat;
